<resources>
    <string name="app_name">Location</string>
    <string name="google_api_key">AIzaSyArjd9iDYCRZ-sv3CoDMFmbyRA-eVf4RC8</string>
    <string name="distance_matrix_api">https://maps.googleapis.com/maps/api/distancematrix/json?origins=</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="total_distance_text">total distance</string>
    <string name="journey_hours_text">journey hours</string>
    <string name="start_text">start</string>
    <string name="destination_text">destination</string>
    <string name="time_left_text">Time left</string>
    <string name="_current_time_text">Current time</string>
    <string name="_current_location_text">Current location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
